--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /node_modules
+/public/bower
+/public/storage
+/public/hot
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
 Homestead.json
 Homestead.yaml
