--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,18 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=studentprojecttracker
+DB_USERNAME=root
+DB_PASSWORD=
+
+
+DB_CONNECTION=mysql
+DB_HOST=107.170.33.156
+DB_PORT=3306
+DB_DATABASE=studentprojecttracker
+DB_USERNAME=root
+DB_PASSWORD=79Tgscas#@%#$RCfwacfd
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
