fixed uploads and cleared db

--- a/.env.example
+++ b/.env.example
@@ -7,17 +7,17 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=studentprojecttracker
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 
 DB_CONNECTION=mysql
-DB_HOST=107.170.33.156
+DB_HOST=
 DB_PORT=3306
-DB_DATABASE=studentprojecttracker
-DB_USERNAME=root
-DB_PASSWORD=79Tgscas#@%#$RCfwacfd
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 
 BROADCAST_DRIVER=log
