--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "jquery": "^3.1.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
+    "select2": "^4.0.3",
     "vue": "^2.1.10"
-  },
-  "dependencies": {
-    "bower": "^1.8.0"
   },
   "name": "studentprojectratcker",
   "description": "<p align=\"center\"><img src=\"https://laravel.com/assets/img/components/logo-laravel.svg\"></p>",
