ignore only default png

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /node_modules
 /resources/assets/bower
 /resources/assets/vendor
+!/public/uploads
 /public/uploads
+!/public/uploads/avatars/
+/public/uploads/avatars/*
+!public/uploads/avatars/default-avatar.png
 /public/storage
 /public/hot
 /storage/*.key
